--- a/html/projiluminacio1.html
+++ b/html/projiluminacio1.html
@@ -40,7 +40,7 @@
                 <div class="div-paragrafs">
                      <p class="p2">Example</p>
                 </div> 
-                <img src="../images/iluminacioex.PNG" width="100%">         
+                <img src="../images/iluminacioex.png" width="100%">         
             </article>
         </section>  
         <footer>
