--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <a href="html/projiluminacio1.html"><img class="image" src="images/iluminacio.png"></a>
                     <a href=""><img class="image" src="images/iluminacio2.png"></a>
                     <a href="html/projanimacio1.html"><img class="image" src="images/face.png"></a>
+                    <a href="html/projanimacio2.html"><img class="image" src="images/walle.PNG"></a>
                 </div>
             </div>
             </div>
