--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a href="mailto:cgemmag@gmail.com" class="logo"><img src="images/email.png" width="50px;"></a>
             <a href="" class="logo"><img src="images/instagram.png" width="50px;"></a>
             <a href="https://www.behance.net/gemmacolom1" class="logo"><img src="images/behance.png" width="50px;"></a>
-            <a href="" class="logo"><img src="images/phone.png" width="50px;"></a>
+            <a href="tel:132456789" class="logo"><img src="images/phone.png" width="50px;"></a>
             <a href="https://linkedin.com/in/gemma-colom-gonzález-66288020a" class="logo"><img src="images/linkedin.png" width="50px;"></a>
             
         </footer>
