--- a/html/sobremi.html
+++ b/html/sobremi.html
@@ -31,11 +31,17 @@
                 <h3 class="proj-sub">About me!</h3>
                    <div class="flex-text">
                     <p class="p1">
-                        El meu nom és Gemma Colom, i actualment sóc una estudiant del grau superior d'Animacions 3D, jocs i entorns interactius.<br>
-                        Abans de venir a Vic, em vaig graduar en un grau mitg de sistemes microinformàtics i Xarxes, el qual vaig cursar a Berga.
+                        Hello,
+                    </p>
+                    <p class="p1">
+                        My name is Gemma Colom,<br>
+                        Actually i am studing 3D animations, games and interactive enviroments in UVic.
+                        <br>
+                        Before entering on this grade, i performed the formative cycle of microinformatic systems and networks in Berga.
                     </p>
                      <p class="p1">
-                         Encara que estic enfocada en l'àmbit més artístic, també m'interessen altres tipus de feines, com el modelatge 3D o el Rigging.
+                         Even though I am more focused on the artistical side of 3D, I am also interested in other disciplines like modeling or rigging.<br>
+                         On the future, I would like to focus on 3D animation for cinema on also on videogames.
                      </p>
                      </div>
           </section>
@@ -48,7 +54,7 @@
                 Gemma Colom ©
             </p>
             <a href="mailto:cgemmag@gmail.com" class="logo"><img src="../images/email.png" width="50px;"></a>
-            <!--<a href="" class="logo"><img src="../images/instagram.png" width="50px;"></a>-->
+            <a href="../documents/CVGemmaColom.pdf" class="logo"><img src="../images/cv.png" width="50px;"></a>
             <a href="https://www.behance.net/gemmacolom1" class="logo"><img src="../images/behance.png" width="50px;"></a>
             <a href="tel: 697 972 286" class="logo"><img src="../images/phone.png" width="50px;"></a>
             <a href="https://linkedin.com/in/gemma-colom-gonzález-66288020a" class="logo"><img src="../images/linkedin.png" width="50px;"></a>
