--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="html/projiluminacio1.html"><img class="image" src="images/iluminacio.png"></a>
                     <a href=""><img class="image" src="images/iluminacio2.png"></a>
                     <a href="html/projanimacio1.html"><img class="image" src="images/face.png"></a>
-                    <a href="html/projanimacio2.html"><img class="image" src="images/walle.PNG"></a>
+                    <a href="html/projanimacio2.html"><img class="image" src="images/walle.jpg"></a>
                 </div>
             </div>
             </div>
@@ -52,7 +52,7 @@
                 Gemma Colom ©
             </p>
             <a href="mailto:cgemmag@gmail.com" class="logo"><img src="images/email.png" width="50px;"></a>
-            <!--<a href="" class="logo"><img src="images/instagram.png" width="50px;"></a>-->
+            <a href="documents/CVGemmaColom.pdf" class="logo"><img src="images/cv.png" width="50px;"></a>
             <a href="https://www.behance.net/gemmacolom1" class="logo"><img src="images/behance.png" width="50px;"></a>
             <a href="tel: 697 972 286" class="logo"><img src="images/phone.png" width="50px;"></a>
             <a href="https://linkedin.com/in/gemma-colom-gonzález-66288020a" class="logo"><img src="images/linkedin.png" width="50px;"></a>
