--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
                 <div class="d-flex flex-wrap img-gallery">
-                    <a href=""><img class="image" src="images/personatge.png"></a>
-                    <a href="html/projiluminacio1.html"><img class="image" src="images/iluminacio.png"></a>
-                    <a href=""><img class="image" src="images/iluminacio2.png"></a>
-                    <a href="html/projanimacio1.html"><img class="image" src="images/face.png"></a>
                     <a href="html/projanimacio2.html"><img class="image" src="images/walle.jpg"></a>
+                    <a href="html/projiluminacio1.html"><img class="image" src="images/iluminacio.png"></a>
+                    <a href="html/projanimacio4.html"><img class="image" src="images/action.jpg"></a>
+                    <a href="html/projiluminacio2.html"><img class="image" src="images/iluminacio2.png"></a>
+                    <a href="html/projanimacio3.html"><img class="image" src="images/walle.jpg"></a>
+                    <a href="html/projanimacio1.html"><img class="image" src="images/face.png"></a>
+                    <a href="html/projanimacio5.html"><img class="image" src="images/walle.jpg"></a>
+                    <a href="html/projdisseny1.html"><img class="image" src="images/personatge.png"></a>
+                    
                 </div>
             </div>
             </div>
