--- a/html/projdisseny1.html
+++ b/html/projdisseny1.html
@@ -34,7 +34,7 @@
                     <p class="p1">In this project I have worked on 2D character design.<br></p>
                     <p class="p2">Final design</p>
                 </div> 
-                <img src="../images/personatge.PNG" width="100%">         
+                <img src="../images/personatge.png" width="100%">         
             </article>
         </section>  
         <footer>
