--- a/html/projiluminacio2.html
+++ b/html/projiluminacio2.html
@@ -34,7 +34,7 @@
                     <p class="p1">In this project I have worked on 2D lighting through a sample.</p>
                     <p class="p2">Final project</p>
                 </div> 
-                <img src="../images/iluminacio2.PNG" width="100%">         
+                <img src="../images/iluminacio2.png" width="100%">         
             </article>
         </section>  
         <footer>
