--- a/html/projanimacio5.html
+++ b/html/projanimacio5.html
@@ -32,11 +32,15 @@
             <h3 class="proj-sub">3D ANIMATION</h3>
                 <div class="div-paragrafs">
                     <p class="p1">In this project I have worked on 3D animation.<br></p>
-                    <p class="p2">Animation</p>
+                    <p class="p2">Angry Walking</p>
                 </div> 
                 <video controls>
-                  <source src="../video/AA2Walle.mp4" type="video/mp4">
-                </video>         
+                  <source src="../video/Walking_lliure.mp4" type="video/mp4">
+                </video>
+                <p class="p2">Neutral Walking</p>
+                <video controls>
+                  <source src="../video/Walking_neutral.mp4" type="video/mp4">
+                </video>          
             </article>
         </section>  
         <footer>
