--- a/html/projdisseny1.html
+++ b/html/projdisseny1.html
@@ -29,14 +29,12 @@
 <!--Seccio tipografia-->
         <section>
            <article>
-            <h3 class="proj-sub">3D ANIMATION</h3>
+            <h3 class="proj-sub">2D CHARACTER DESIGN</h3>
                 <div class="div-paragrafs">
-                    <p class="p1">In this project I have worked on 3D animation.<br></p>
-                    <p class="p2">Animation</p>
+                    <p class="p1">In this project I have worked on 2D character design.<br></p>
+                    <p class="p2">Final design</p>
                 </div> 
-                <video controls>
-                  <source src="../video/AA2Walle.mp4" type="video/mp4">
-                </video>         
+                <img src="../images/personatge.png" width="100%">         
             </article>
         </section>  
         <footer>
