--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
                 <div class="d-flex flex-wrap img-gallery">
-                    <a href=""><img class="image" src="images/personatge.png"></a>
+                    <a href="html/projanimacio2.html"><img class="image" src="images/walle.jpg"></a>
                     <a href="html/projiluminacio1.html"><img class="image" src="images/iluminacio.png"></a>
-                    <a href=""><img class="image" src="images/iluminacio2.png"></a>
+                    <a href="html/projanimacio4.html"><img class="image" src="images/action.jpg"></a>
+                    <a href="html/projiluminacio2.html"><img class="image" src="images/iluminacio2.png"></a>
+                    <a href="html/projanimacio3.html"><img class="image" src="images/walle.jpg"></a>
                     <a href="html/projanimacio1.html"><img class="image" src="images/face.png"></a>
-                    <a href="html/projanimacio2.html"><img class="image" src="images/walle.PNG"></a>
+                    <a href="html/projanimacio5.html"><img class="image" src="images/walle.jpg"></a>
+                    <a href="html/projdisseny1.html"><img class="image" src="images/personatge.png"></a>
+                    
                 </div>
             </div>
             </div>
@@ -52,9 +56,9 @@
                 Gemma Colom ©
             </p>
             <a href="mailto:cgemmag@gmail.com" class="logo"><img src="images/email.png" width="50px;"></a>
-            <a href="" class="logo"><img src="images/instagram.png" width="50px;"></a>
+            <a href="documents/CVGemmaColom.pdf" class="logo"><img src="images/cv.png" width="50px;"></a>
             <a href="https://www.behance.net/gemmacolom1" class="logo"><img src="images/behance.png" width="50px;"></a>
-            <a href="" class="logo"><img src="images/phone.png" width="50px;"></a>
+            <a href="tel: 697 972 286" class="logo"><img src="images/phone.png" width="50px;"></a>
             <a href="https://linkedin.com/in/gemma-colom-gonzález-66288020a" class="logo"><img src="images/linkedin.png" width="50px;"></a>
             
         </footer>
