--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="html/projiluminacio1.html"><img class="image" src="images/iluminacio.png"></a>
                     <a href="html/projanimacio4.html"><img class="image" src="images/action.jpg"></a>
                     <a href="html/projiluminacio2.html"><img class="image" src="images/iluminacio2.png"></a>
-                    <a href="html/projanimacio3.html"><img class="image" src="images/walle.jpg"></a>
+                    <a href="html/projanimacio3.html"><img class="image" src="images/jump.jpg"></a>
                     <a href="html/projanimacio1.html"><img class="image" src="images/face.png"></a>
                     <a href="html/projdisseny1.html"><img class="image" src="images/personatge.png"></a>
                     
