--- a/html/projanimacio2.html
+++ b/html/projanimacio2.html
@@ -31,7 +31,7 @@
            <article>
             <h3 class="proj-sub">3D ANIMATION</h3>
                 <div class="div-paragrafs">
-                    <p class="p1">In this project I have worked on 3D animation.<br></p>
+                    <p class="p1">In this project I have worked on 3D animation.<br><i>I used Wall-E 3D model.</i></p>
                     <p class="p2">Animation</p>
                 </div> 
                 <video controls>
