--- a/html/projanimacio4.html
+++ b/html/projanimacio4.html
@@ -29,9 +29,9 @@
 <!--Seccio tipografia-->
         <section>
            <article>
-            <h3 class="proj-sub">3D ANIMATION</h3>
+            <h3 class="proj-sub">3D ANIMATION <i>(ACTION SCENE)</i></h3>
                 <div class="div-paragrafs">
-                    <p class="p1">In this project I have worked on 3D animation.<br></p>
+                    <p class="p1">In this project I have worked different types of jumps. Doing in this an action scene.<br><i>I used Stewart 3D model.</i></p>
                     <p class="p2">Animation</p>
                 </div> 
                 <video controls>
