--- a/html/projiluminacio2.html
+++ b/html/projiluminacio2.html
@@ -31,7 +31,7 @@
            <article>
             <h3 class="proj-sub">2D LIGHTNING</h3>
                 <div class="div-paragrafs">
-                    <p class="p1">In this project I have worked on 2D lighting through a sample.</p>
+                    <p class="p1">In this project I have worked on 2D lighting.</p>
                     <p class="p2">Final project</p>
                 </div> 
                 <img src="../images/iluminacio2.png" width="100%">         
