--- a/html/sobremi.html
+++ b/html/sobremi.html
@@ -35,9 +35,9 @@
                     </p>
                     <p class="p1">
                         My name is Gemma Colom,<br>
-                        Actually i am studing 3D animations, games and interactive enviroments in UVic.
+                        Actually I am studing 3D animations, games and interactive enviroments in UVic.
                         <br>
-                        Before entering on this grade, i performed the formative cycle of microinformatic systems and networks in Berga.
+                        Before entering on this grade, I performed the formative cycle of microinformatic systems and networks in Berga.
                     </p>
                      <p class="p1">
                          Even though I am more focused on the artistical side of 3D, I am also interested in other disciplines like modeling or rigging.<br>
