--- a/html/projanimacio1.html
+++ b/html/projanimacio1.html
@@ -31,7 +31,7 @@
            <article>
             <h3 class="proj-sub">2D CHARACTER DESIGN</h3>
                 <div class="div-paragrafs">
-                    <p class="p1">In this project I have worked on 2D character design.<br></p>
+                    <p class="p1">In this project I have worked on 2D character design.<br><i>I used Photoshop to draw this character.</i></p>
                     <p class="p2">Turn arround</p>
                 </div> 
                 <img src="../images/personatge2.PNG" width="100%">         
